deploy/butane/overlays/staging/coreos/files/k3s/manifests/jellyfin.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jellyfin
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jellyfin
  name: jellyfin
  namespace: jellyfin
spec:
  ports:
  - name: jellyfin-web
    port: 8080
    protocol: TCP
    targetPort: 8096
  selector:
    app: jellyfin
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jellyfin
  name: jellyfin
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
      name: jellyfin
      namespace: jellyfin
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: app
                operator: In
                values:
                - compute
      containers:
      - env:
        - name: JELLYFIN_PublishedServerUrl
          value: https://jellyfin.app.rick-dev.expresso.lan
        - name: JELLYFIN_DATA_DIR
          value: /data
        - name: PASSWORD
          valueFrom:
            secretKeyRef:
              key: web.password.txt
              name: web-password-m5ffmm5d25
              optional: false
        image: docker.io/linuxserver/jellyfin:10.9.10
        livenessProbe:
          initialDelaySeconds: 120
          tcpSocket:
            port: 8096
        name: jellyfin
        ports:
        - containerPort: 8096
          protocol: TCP
        resources:
          limits:
            cpu: 5000m
            memory: 15G
          requests:
            cpu: 500m
            memory: 1G
        securityContext:
          capabilities:
            drop:
            - NET_ADMIN
            - CAP_MKNOD
            - CAP_NET_RAW
            - CAP_AUDIT_WRITE
          privileged: true
        volumeMounts:
        - mountPath: /media
          name: media
        - mountPath: /config
          name: conf
          subPath: config
        - mountPath: /config/cache
          name: cache
          subPath: cache
        - mountPath: /dev/dri/renderD128
          name: dev-dri
        - mountPath: /config/log
          name: logs
          subPath: log
        - mountPath: /config/data/transcodes
          name: transcodes
          subPath: transcodes
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: media-pvc
      - name: conf
        persistentVolumeClaim:
          claimName: conf-pvc
      - hostPath:
          path: /dev/dri/renderD128
          type: CharDevice
        name: dev-dri
      - hostPath:
          path: /dev/dri/card1
          type: CharDevice
        name: card1
      - emptyDir:
          medium: Memory
          sizeLimit: 2Gi
        name: cache
      - emptyDir:
          medium: Memory
          sizeLimit: 500Mi
        name: logs
      - emptyDir:
          medium: Memory
          sizeLimit: 10Gi
        name: transcodes
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-ir
  namespace: jellyfin
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`jellyfin.app.rick-dev.expresso.lan`)
    middlewares:
    - name: jellyfin-mw
    services:
    - kind: Service
      name: jellyfin
      namespace: jellyfin
      port: jellyfin-web
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: jellyfin-mw
  namespace: jellyfin
spec:
  headers:
    contentTypeNosniff: true
    customFrameOptionsValue: allow-from https://expresso.lan
    customResponseHeaders:
      X-Robots-Tag: noindex,nofollow,nosnippet,noarchive,notranslate,noimageindex
      X-XSS-PROTECTION: "1"
    forceSTSHeader: true
    frameDeny: true
    sslRedirect: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 315360000
